// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should clear 1`] = `
<div>
  <button
    className="search-navigator-facet-header-button button-small button-red"
    onClick={[Function]}
  >
    clear
  </button>
  <span
    className="search-navigator-facet-header"
  >
    <a
      href="#"
      onClick={[Function]}
    >
      <OpenCloseIcon
        className="little-spacer-right"
        open={false}
      />
      foo
    </a>
    <span
      className="spacer-left badge badge-secondary is-rounded"
    >
      3
    </span>
  </span>
</div>
`;

exports[`should render closed facet with value 1`] = `
<div>
  <span
    className="search-navigator-facet-header"
  >
    <a
      href="#"
      onClick={[Function]}
    >
      <OpenCloseIcon
        className="little-spacer-right"
        open={false}
      />
      foo
    </a>
    <span
      className="spacer-left badge badge-secondary is-rounded"
    >
      1
    </span>
  </span>
</div>
`;

exports[`should render closed facet without value 1`] = `
<div>
  <span
    className="search-navigator-facet-header"
  >
    <a
      href="#"
      onClick={[Function]}
    >
      <OpenCloseIcon
        className="little-spacer-right"
        open={false}
      />
      foo
    </a>
  </span>
</div>
`;

exports[`should render open facet with value 1`] = `
<div>
  <span
    className="search-navigator-facet-header"
  >
    <a
      href="#"
      onClick={[Function]}
    >
      <OpenCloseIcon
        className="little-spacer-right"
        open={true}
      />
      foo
    </a>
  </span>
</div>
`;

exports[`should render open facet without value 1`] = `
<div>
  <span
    className="search-navigator-facet-header"
  >
    <a
      href="#"
      onClick={[Function]}
    >
      <OpenCloseIcon
        className="little-spacer-right"
        open={true}
      />
      foo
    </a>
  </span>
</div>
`;

exports[`should render without link 1`] = `
<div>
  <span
    className="search-navigator-facet-header"
  >
    foo
  </span>
</div>
`;
